# wasm-reduxrs-example

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/core/: Cargo.toml
app/core/src/: lib.rs
app/core/src/actions/: game.rs  mod.rs  units.rs
app/core/src/buildings/: humans.rs  mod.rs
app/core/src/game/: mod.rs
app/core/src/maps/: mod.rs  templates.rs  temple.rs  utils.rs
app/core/src/models/: cursor.rs  geometry.rs  mod.rs  tile.rs
app/core/src/reducers/: game.rs  mod.rs  settings.rs  state.rs  utils.rs
app/core/src/state/: mod.rs
app/core/src/tests/: maps.rs  mod.rs  reducers.rs  state.rs  theme.rs  utils.rs
app/core/src/theme/: mod.rs
app/core/src/units/: humans.rs  mod.rs
app/core/src/utils/: collection.rs
app/quicksilver-renderer/: Cargo.toml
app/quicksilver-renderer/src/: entry.rs  main.rs
app/wasm/: Cargo.toml  index.html
app/wasm/src/: lib.rs  utils.rs
client/: Cargo.toml
client/common/: Cargo.toml
client/common/src/: lib.rs
client/common/src/actions/: settings.rs
client/common/src/maps/: mod.rs  types.rs
client/common/src/reducers/: mod.rs  settings.rs
client/common/src/theme/: mod.rs
client/core/: Cargo.toml
client/quicksilver-renderer/: Cargo.toml
client/quicksilver-renderer/src/: entry.rs  main.rs
core/: Cargo.toml
core/src/buildings/: humans.rs
core/src/game/: mod.rs
core/src/maps/: mod.rs  templates.rs
core/src/models/: cursor.rs  geometry.rs  tile.rs
core/src/tests/: theme.rs
design/: theme.afdesign
src/: entry.rs  main.rs  theme.rs
wasm/: index.html
wasm/src/: lib.rs  utils.rs
(+1 files in other folders)
