[package]
name = "wasm"
version = "1.0.0"
authors = ["Schr3da <strieder.georg@gmail.com>"]
edition = "2018"

[lib]
name = "wasm"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
core = {path = "../core"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
]
