[package]
name = "wasm"
version = "1.0.0"
authors = ["Schr3da <strieder.georg@gmail.com>"]
edition = "2018"

[lib]
name = "wasm"
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.27"
wasm-bindgen = "0.2.50"
core = {path = "../core"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'KeyboardEvent',
  'Node',
  'Window',
]
